--- a/i18n/raw.yaml
+++ b/i18n/raw.yaml
@@ -362,15 +362,17 @@
   value: The nickname is too long. Please shorten it.
   description: A string for the error message when the nickname is too long.
 
-- name: VALIDATION_ERROR_PASSWORD_CONFIRM_EMPTY
-  value: Password confirm cannot be empty.
-  description: A string for the error message when password confirm is empty.
-
 - name: VALIDATION_ERROR_PASSWORD_CONFIRM_MISMATCH
   value: Password confirm does not match the password.
   description: >-
     A string for the error message when password confirm does not match the
     password.
+
+- name: VALIDATION_ERROR_PASSWORD_LENGTH_ERROR
+  value: Password must be between {0} and {1} characters.
+  description: >-
+    A string for the error message when password length is invalid. {0} is the
+    minimum length, and {1} is the maximum length.
 
 - name: VALIDATION_ERROR_TITLE_EMPTY
   value: Title cannot be empty.
