--- a/i18n/localized.zh-cn.yaml
+++ b/i18n/localized.zh-cn.yaml
@@ -463,7 +463,7 @@
   raw: Password confirm does not match the password.
 
 - name: VALIDATION_ERROR_PASSWORD_LENGTH_ERROR
-  value: null
+  value: 密码长度必须在 {0} 到 {1} 个字符之间。
   description: >-
     A string for the error message when password length is invalid. {0} is the
     minimum length, and {1} is the maximum length.
@@ -560,9 +560,9 @@
   raw: Avatar
 
 - name: USER_PROFILE_PAGE_TITLE_WITH_NAME
-  value: '{0} 的个人资料'
+  value: "{0} 的个人资料"
   description: A string for the title of user profile page.
-  raw: '{0}''s Profile'
+  raw: "{0}'s Profile"
 
 - name: USER_PREFERENCE_PAGE_TITLE
   value: 偏好设置
@@ -687,18 +687,18 @@
   raw: Generate ID
 
 - name: PROBLEM_EDIT_TITLE_WITH_ID
-  value: '#{0}({1}). {2} - 编辑'
+  value: "#{0}({1}). {2} - 编辑"
   description: >-
     A string for the title of problem edit page. {0} is the problem display ID,
     {1} is the problem ID, and {2} is the problem title.
-  raw: '#{0}({1}). {2} - Edit'
+  raw: "#{0}({1}). {2} - Edit"
 
 - name: PROBLEM_EDIT_TITLE
-  value: '#{0}. {1} - 编辑'
+  value: "#{0}. {1} - 编辑"
   description: >-
     A string for the title of problem edit page. {0} is the problem display ID,
     and {1} is the problem title.
-  raw: '#{0}. {1} - Edit'
+  raw: "#{0}. {1} - Edit"
 
 - name: CODE_COPIED_MESSAGE
   value: 代码已复制到剪贴板。
@@ -806,29 +806,29 @@
   raw: GNU C++20
 
 - name: COMPILATION_CPP_OPTIMIZATION_O0
-  value: '-O0 (禁用优化)'
+  value: "-O0 (禁用优化)"
   description: A string for the label of O0 optimization.
-  raw: '-O0 (disable optimization)'
+  raw: "-O0 (disable optimization)"
 
 - name: COMPILATION_CPP_OPTIMIZATION_O1
-  value: '-O1'
+  value: "-O1"
   description: A string for the label of O1 optimization.
-  raw: '-O1'
+  raw: "-O1"
 
 - name: COMPILATION_CPP_OPTIMIZATION_O2
-  value: '-O2'
+  value: "-O2"
   description: A string for the label of O2 optimization.
-  raw: '-O2'
+  raw: "-O2"
 
 - name: COMPILATION_CPP_OPTIMIZATION_O3
-  value: '-O3'
+  value: "-O3"
   description: A string for the label of O3 optimization.
-  raw: '-O3'
+  raw: "-O3"
 
 - name: COMPILATION_CPP_OPTIMIZATION_OFAST
-  value: '-Ofast (最快)'
+  value: "-Ofast (最快)"
   description: A string for the label of Ofast optimization.
-  raw: '-Ofast (fastest)'
+  raw: "-Ofast (fastest)"
 
 - name: COMPILATION_CPP_ARCHITECTURE_64
   value: 64 位
@@ -901,14 +901,14 @@
   raw: JVM
 
 - name: COMPILATION_PAS_OPTIMIZATION_O
-  value: '-O'
+  value: "-O"
   description: A string for the label of O optimization.
-  raw: '-O'
+  raw: "-O"
 
 - name: COMPILATION_PAS_OPTIMIZATION_O4
-  value: '-O4 (最快)'
+  value: "-O4 (最快)"
   description: A string for the label of O4 optimization.
-  raw: '-O4 (fastest)'
+  raw: "-O4 (fastest)"
 
 - name: COMPILATION_RS_OPTIMIZATION_1
   value: 1 级
